--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -1,9 +1,4 @@
 
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 15px;
-}
-
 .header {
   height: 1057px;
   background: url(../images/header-background.jpg) no-repeat center;
@@ -26,7 +21,7 @@ body {
   border-radius: 0 0 8px 8px;
 
   text-decoration: none;
-  color: #314a5b;
+  color: #fff;
 
   background-color: #fa5c65;
   transition: .25s;
@@ -34,16 +29,16 @@ body {
 
 .logo:hover {
   cursor: pointer;
-  color: #fff;
+  color: #314a5b;
 }
 
-.logo span {
-  color: #fff;
+.logo i {
+  color: #314a5b;
   transition: .25s;
 }
 
-.logo:hover span{
-  color: #314a5b;
+.logo:hover i{
+  color: #fff;
 }
 
 .menu {
@@ -105,14 +100,15 @@ body {
   margin-top: 307px;
 
   text-transform: uppercase;
-  color: #fa5c65;
-}
-
-.header-title span {
   color: #314a5b;
 }
 
+.header-title i {
+  color: #fa5c65;
+}
+
 .header-subtitle {
+  font-family: 'Open Sans', sans-serif;
   font-size: 20px;
 
   margin-top: 27px;
@@ -123,6 +119,7 @@ body {
 .header-button {
   display: block;
 
+  font-family: 'Open Sans', sans-serif;
   font-size: 15px;
   font-weight: 700;
 
@@ -148,6 +145,10 @@ body {
   color: #314a5b;
 }
 
+.feature {
+  height: 312px;
+}
+
 .feature-title {
   font-family: 'Montserrat', sans-serif;
   font-size: 26px;
@@ -164,11 +165,17 @@ body {
 }
 
 .feature-text {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+
   margin-top: 26px;
 
   line-height: 22px;
-
   color: #9aa0ab;
+}
+
+.feature-button {
+  margin-top: 27px;;
 }
 
 .more-button {
@@ -177,7 +184,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
 
-  margin-top: 27px;
+  width: 90px;
 
   text-transform: uppercase;
   text-decoration: none;
@@ -192,4 +199,59 @@ body {
 
 .more-button:hover {
   color: #465065;
+}
+
+.portfolio {
+  height: 406px;
+}
+
+.portfolio-content {
+  box-sizing: border-box;
+
+  height: 406px;
+  padding-left: 480px;
+
+  background: url(../images/portfolio-backround.png) no-repeat left;
+}
+
+.portfolio-title {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 40px;
+  font-weight: 700;
+
+  margin-top: 67px;
+
+  text-transform: uppercase;
+  color: #314a5b;
+}
+
+.portfolio-title i {
+  color: #f0454c;
+}
+
+.portfolio-subtitle {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+
+  margin-top: 17px;
+
+  color: #314a5b;
+}
+
+.portfolio-text {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+
+  margin-top: 30px;
+
+  color: #9aa0ab;
+}
+
+.portfolio-paragraph {
+  margin-bottom: 26px;
+  line-height: 22px;
+}
+
+.portfolio-button {
+  margin-top: 16px;
 }
