fix portfolio background image

--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -211,7 +211,7 @@
   height: 406px;
   padding-left: 480px;
 
-  background: url(../images/portfolio-backround.png) no-repeat left;
+  background: url(../images/portfolio-backround.jpg) no-repeat left;
 }
 
 .portfolio-title {
